added bin so it can be started as a command on the shell

--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "eslint-config-google": "^0.9.1",
     "mocha": "^5.0.1",
     "nyc": "^11.4.1"
+  },
+  "bin": {
+    "ipfsconsortiumproxy": "start.sh"
   }
 }
