--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
   "homepage": "https://github.com/ipfsconsortium/IPFSConsortiumProxy#readme",
   "dependencies": {
     "command-line-tool": "^0.8.0",
-    "dotenv": "^5.0.0",
-    "ipfs-api": "^18.1.1",
-    "ipfsconsortiumcontracts": "^0.0.1",
+    "dotenv": "^5.0.1",
+    "ipfs-api": "^18.2.0",
+    "ipfsconsortiumcontracts": "^0.0.2",
     "level": "^3.0.0",
-    "web3": "^1.0.0-beta.30",
-    "winston": "^3.0.0-rc1"
+    "web3": "^1.0.0-beta2",
+    "winston": "^3.0.0-rc3"
   },
   "devDependencies": {
-    "eslint": "^4.18.1",
+    "eslint": "^4.19.0",
     "eslint-config-google": "^0.9.1",
-    "mocha": "^5.0.1",
-    "nyc": "^11.4.1"
+    "mocha": "^5.0.4",
+    "nyc": "^11.6.0"
   },
   "bin": {
     "ipfsconsortiumproxy": "bin.js"
