--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/ipfsconsortium/IPFSConsortiumProxy#readme",
   "dependencies": {
+    "abi-decoder": "^1.1.0",
     "bn.js": "^4.11.8",
     "command-line-tool": "^0.8.0",
     "dotenv": "^5.0.1",
