--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
   "homepage": "https://github.com/ipfsconsortium/IPFSConsortiumProxy#readme",
   "dependencies": {
     "abi-decoder": "^1.1.0",
+    "async": "^2.6.0",
     "bn.js": "^4.11.8",
     "command-line-tool": "^0.8.0",
     "dotenv": "^5.0.1",
-    "ipfs-api": "^19.0.0",
+    "ipfs-api": "^20.0.1",
     "ipfsconsortiumcontracts": "^0.0.3",
     "level": "^3.0.0",
     "web3": "^1.0.0-beta.30",
@@ -36,7 +37,7 @@
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
-    "mocha": "^5.0.5",
+    "mocha": "^5.1.0",
     "nyc": "^11.6.0"
   },
   "bin": {
