--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "abi-decoder": "^1.1.0",
     "async": "^2.6.0",
+    "bluebird": "^3.5.1",
     "bn.js": "^4.11.8",
     "command-line-tool": "^0.8.0",
     "dotenv": "^5.0.1",
