--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - sudo apt-get install golang-go -y
   - wget https://dist.ipfs.io/go-ipfs/v0.4.10/go-ipfs_v0.4.10_linux-386.tar.gz
   - tar xvfz go-ipfs_v0.4.10_linux-386.tar.gz
-  - echo 'hello' | ./go-ipfs/ipfs add --api /ip4/`dig +short ${IPFS_HOSTNAME}`/tcp/5001/http
+  - echo 'hello' | ./go-ipfs/ipfs add --api /ip4/${IPFS_IP}/tcp/5001/http
 
 deploy:
   provider: script
