--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ before_install:
 install:
   - sudo apt-get update
   - sudo apt-get install golang-go -y
-  - wget https://dist.ipfs.io/go-ipfs/v0.4.10/go-ipfs_v0.4.10_linux-386.tar.gz
-  - tar xvfz go-ipfs_v0.4.10_linux-386.tar.gz
+  - wget https://dist.ipfs.io/go-ipfs/v0.4.15/go-ipfs_v0.4.15_freebsd-amd64.tar.gz
+  - tar xvfz go-ipfs_v0.4.15_freebsd-amd64.tar.gz
   - echo 'hello' | ./go-ipfs/ipfs add --api /ip4/${IPFS_IP}/tcp/5001/http
 
 deploy:
